WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286432
REGRESSION(
285245@main
): Crash in RemoteMediaPlayerManager::createRemoteMediaPlayer()
https://bugs.webkit.org/show_bug.cgi?id=286432
Summary
REGRESSION(285245@main): Crash in RemoteMediaPlayerManager::createRemoteMedia...
Jer Noble
Reported
2025-01-23 12:30:09 PST
REGRESSION(
285245@main
): Crash in RemoteMediaPlayerManager::createRemoteMediaPlayer()
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2025-01-23 12:30:10 PST
<
rdar://problem/143456252
>
Jer Noble
Comment 2
2025-01-23 12:43:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39460
EWS
Comment 3
2025-01-23 19:59:08 PST
Committed
289328@main
(e259d475088f): <
https://commits.webkit.org/289328@main
> Reviewed commits have been landed. Closing PR #39460 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug