REGRESSION(285245@main): Crash in RemoteMediaPlayerManager::createRemoteMediaPlayer() https://bugs.webkit.org/show_bug.cgi?id=286432 rdar://143456252

Reviewed by Eric Carlson and Jean-Yves Avenard.

In 285245@main, an optional identifier variable was unconditionally dereferenced when passing a message
across to RemoteMediaPlayerManagerProxy, under the assumption that the identifier would never be null.
However, it is possible for the MediaPlayer to outlive the HTMLMediaElement which created it, and in that
case the MediaPlayerClient backref is replaced by a reference to a NullMediaPlayerClient. This object
will return a nullopt identifier.

Make mediaPlayerClientIdentifier() non-optional. And add implementations of mediaPlayerClientIdentifier()
in all the places it was missing before.

* Source/WebCore/html/HTMLMediaElement.h:
* Source/WebCore/platform/graphics/MediaPlayer.cpp:
* Source/WebCore/platform/graphics/MediaPlayer.h:
(WebCore::MediaPlayerClient::mediaPlayerClientIdentifier const): Deleted.
* Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxy.h:
* Source/WebKit/WebProcess/GPU/media/RemoteMediaPlayerManager.cpp:
(WebKit::RemoteMediaPlayerManager::createRemoteMediaPlayer):

Canonical link: https://commits.webkit.org/289328@main